# cmm-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LLM_GUIDELINES.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  manifest.yml  pyproject.toml
.github/scripts/: build-push-image.sh  build-secrets.sh  download-task-definition.sh  register-task-definition.sh  run-migrations.sh
.github/workflows/: deploy.yml
airtable_csv_exports/: Assets.csv  Cohort.csv  Contacts.csv  Cycle.csv  DATA_MODEL.md  Invoices.csv  One-on-one Meetings.csv  PAUL MARTIN.csv  POSTGRES_SCHEMA.md  Sales.csv  School Date Selector.csv  Schools.csv  Settings.csv  Webinars.csv  Workshops.csv
alembic/: env.py
alembic/versions/: 8a3129898ea2_merge_heads.py  a1b2c3d4e5f6_add_user_roles.py  d5e6f7a8b9c0_add_content_assets_tables.py  e1f2a3b4c5d6_add_content_status_topics_cohort_mapping.py  e9a78c61a7b9_initial_schema.py  f2a3b4c5d6e7_add_content_sections.py  f3a4b5c6d7e8_drop_milestone_tables.py  g3b4c5d6e7f8_enable_pg_trgm_fuzzy_search.py  i5j6k7l8m9n0_add_guest_contacts_table.py  k8l9m0n1o2p3_add_grade_config_page_fields.py  m1n2o3p4q5r6_rename_topics_to_goals.py  (+6 more)
scripts/: airtable_export_csv.py  airtable_pull_data.py  airtable_schema_to_postgres.py  import_content_assets.py  import_csv_data.py  import_topics_from_google_docs.py  migrate_images_to_s3.py  migrate_logos_to_s3.py  migrate_wp_content.py  seed_counselors_from_contacts.py  seed_super_admins.py  upload_to_s3.py
src/: __init__.py  config.py  main.py
src/auth/: deps.py  (+3 more)
supabase/: README.md  config.toml
(+51 files in other folders)
